# cocos2dx.cmake

./: .gitmodules  CMakeLists.txt
